...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            tools:text="Job Request" />

        <TextView
...
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorUsername"
            tools:text="bob b." />

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget est at ipsum tristique imperdiet. Ut sit amet elit non." />

    </LinearLayout>
...
